# fogchess

./: .gitignore  CMakeLists.txt  README.md  benchmark_python.py  fog_sdk.py  fog_state.h  fog_test.py
.github/workflows/: ci.yml
benchmarks/: test_run.txt
include/: fog_arena.h  fog_command.h  fog_sdk.h  fog_state.h
src/: main.cpp
src/kernel/: hasher.hpp  move_gen.cpp  move_gen_full.cpp  observation.cpp  rules.cpp  simd_math.hpp  state_init.cpp  tables.cpp  threats.cpp  visibility.cpp
src/runtime/: scheduler.cpp
src/sdk/: bridge.cpp  bridge_observations.cpp
tests/: benchmark_core.cpp  test_determinism.cpp  test_end_to_end.cpp  test_kernel_core.cpp  test_rules.cpp  test_simd.cpp
tools/: localize_runtime.py
